Try less complex setup without the CMS stuff